# Task-Manager

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  render.yaml
.github/workflows/: test.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: dump_data.json  labels.json  parser_json_data.py  statuses.json  tasks.json  users.json
task_manager/labels/: admin.py  models.py  tests.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: models.py  tests.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_tasklabelrelation_task_labels.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: delete.html
task_manager/templates/statuses/: update.html
task_manager/templates/tasks/: index.html  show.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
