[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This is a web application that allows you to distribute tasks among users and monitor their performance"
authors = ["Евгений <prokofev_619@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]
classifiers = [
    "Programming Language :: Python :: ^3.10",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Operating System :: Unix",
    "Framework :: Django :: ^5.0.6",
    "Natural Language :: Russian",
    "Natural Language :: English",
    "Topic :: Office/Business :: Groupware"
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
django-bootstrap5 = "^24.2"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
django-filter = "^24.2"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
